--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ header, main, footer {
 header {
   padding: 2em;
   text-align: center;
-  background-image: url('./img/bg.jpg');
+  #background-image: url('./img/bg.jpg');
+  background-color: #79d3ae;
   background-size: cover;
   background-position: fixed;
   color: white;
@@ -93,9 +94,9 @@ a .fab {
 
 .course .title {
   color: #509e98;
-  -ms-flex: 0 0 33.3%;
-  flex: 0 0 33.3%;
-  max-width: 33%;
+  -ms-flex: 0 0 70.3%;
+  flex: 0 0 70.3%;
+  max-width: 70%;
 }
 
 .course .descrition {
